objects/WT_CaseComplianceEmailAlertConfig__mdt.object
<CustomObject>
    <description>This will have the Old and New Status Values to check for the Compliance Email Alert.
This also has the List of Email Recipients to whom the email is to be sent.</description>
    <fields>
        <fullName>EmailRecipients__c</fullName>
        <label>EmailRecipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <label>Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewStatus__c</fullName>
        <label>NewStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldStatus__c</fullName>
        <label>OldStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>WT_CaseComplianceEmailAlertConfig</label>
    <pluralLabel>WT_CaseComplianceEmailAlertConfig</pluralLabel>
</CustomObject>